--- a/src/LiviaNET_Config.ini
+++ b/src/LiviaNET_Config.ini
@@ -126,18 +126,18 @@ applyPadding = 1
 ############################################################################################################################################
 
 [Training Images]
-imagesFolder = /~yourpath/Dataset/MR/ 
-GroundTruthFolder = /~yourpath/Dataset/Label/
+imagesFolder = ../Dataset/MICCAI/MR/
+GroundTruthFolder = ../Dataset/MICCAI/Label/
 # ROI folder will contain the ROI where to extract the pacthes and where to perform the segmentation.
 # Values of the ROI should be 0 (non interest) and 1 (region of interest)
-ROIFolder = /~yourpath/Dataset/ROI/
+#ROIFolder = /~yourpath/Dataset/ROI/
 # If you have no ROIs
-#ROIFolder = []
+ROIFolder = []
 # Type of images in the dataset
 #     0: nifti format
 #     1: matlab format
 # IMPORTANT: All the volumes should have been saved as 'vol'
-imageTypes = 1
+imageTypes = 0
 
 # Indexes for training/validation images. Note that indexes should correspond to the position = inex + 1 in the folder,
 # since python starts indexing at 0
