--- a/src/LiviaNET_Config.ini
+++ b/src/LiviaNET_Config.ini
@@ -37,7 +37,7 @@ activationType = 2
 
 # TODO. Include activation type for Softmax layer
 # Number of classes: background + classes to segment
-n_classes = 9
+n_classes = 5
 
 # ------- Weights initialization ----------- #
 # There are some ways to initialize the weights. This is defined by the variable "weight_Initialization"
@@ -126,8 +126,8 @@ applyPadding = 1
 ############################################################################################################################################
 
 [Training Images]
-imagesFolder = ../Dataset/MICCAI/MR/
-GroundTruthFolder = ../Dataset/MICCAI/Label/
+imagesFolder = ../Dataset/BraTS/MR/
+GroundTruthFolder = ../Dataset/BraTS/Label/
 # ROI folder will contain the ROI where to extract the pacthes and where to perform the segmentation.
 # Values of the ROI should be 0 (non interest) and 1 (region of interest)
 #ROIFolder = /~yourpath/Dataset/ROI/
